# time-confighub

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  black_config.toml  install.sh  pyproject.toml  setup.py  uninstall.sh
.github/: copilot-instructions.md
.github/workflows/: ci-unit_test.yml  python-code-check.yml
conf/: tch_app.conf
docs/: README.md
examples/scenario_1/: SCENARIO_1.md  scenario_1-2TA_1NonTA_1BE.xml
functionality_tests/config_parser/: I226-1-ES-IDEAL_config_demo_4.xml  set_python_path.sh  test_ge.py
src/time_config_hub/: __init__.py  cli.py  config_reader.py  core.py  definitions.py  exceptions.py  logging_setup.py  service.py  service_manager.py  watch_handler.py
src/time_config_hub/commands/: base_command.py  ethtool_command.py
src/time_config_hub/devices/: __init__.py  device.py  intel_i226.py
src/time_config_hub/templates/: __init__.py  tch.service
src/time_config_hub/utils/: pci_utils.py
src/tsn_config_parser/: GE_dictionary.py  __init__.py  tc_command.py  universal_dictionary.py  universal_parser.py  xml_parser.py  yaml_parser.py
tests/config_parser/: __init__.py  test_tc_command.py  test_vlan_tag_filters.py
